@@ -133,7 +133,7 @@ SQL_QUERY;
 		while (!$rs->EOF) {
 			$ticket_id		= $rs->fields['ticket_id'];
 			$from			= get_ticket_from($sql, $ticket_id);
-			$to				= get_ticket_to($sql, $ticket_id, $user_id);
+			$to				= get_ticket_to($sql, $ticket_id, $user_id, true);
 			$date			= ticketGetLastDate($sql, $ticket_id);
 			$ticket_urgency	= $rs->fields['ticket_urgency'];
 			$ticket_status	= $rs->fields['ticket_status'];
@@ -149,7 +149,7 @@ SQL_QUERY;
 				array(
 					'ID'		=> $ticket_id,
 					'FROM'		=> htmlspecialchars($from),
-					'TO'		=> htmlspecialchars($to),
+					'TO'		=> $to,
 					'LAST_DATE'	=> $date,
 					'SUBJECT'	=> htmlspecialchars($rs->fields['ticket_subject']),
 					'SUBJECT2'	=> addslashes(clean_html($rs->fields['ticket_subject'])),
@@ -207,7 +207,7 @@ SQL_QUERY;
 	return $from_name;
 }
 
-function get_ticket_to(&$sql, $ticket_id, $user_id) {
+function get_ticket_to(&$sql, $ticket_id, $user_id, $html = false) {
 	$query = <<<SQL_QUERY
 		SELECT
 			`ticket_from`,
@@ -244,6 +244,12 @@ SQL_QUERY;
 	$admin_type = $rs->fields['admin_type'];
 	$to_first_name = $rs->fields['fname'];
 	$to_last_name = $rs->fields['lname'];
+
+	if ($html) {
+		$to_first_name = htmlspecialchars($to_first_name);
+		$to_last_name = htmlspecialchars($to_last_name);
+		$to_user_name = htmlspecialchars($to_user_name);
+	}
 
 	if ($rs->fields['admin_id'] == $user_id) {
 		$to_name = "<b>". $to_first_name . " " . $to_last_name . " (" . $to_user_name . ")</b>";
